<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome_aluno"
        app:layout_constraintBottom_toTopOf="@+id/tvRa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/ra_aluno"
        app:layout_constraintBottom_toTopOf="@+id/tvTitulo"
        app:layout_constraintStart_toStartOf="@+id/tvAluno"
        app:layout_constraintTop_toBottomOf="@+id/tvAluno" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="25dp"
        android:text="@string/titulo"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/etNumeroBits"
        app:layout_constraintEnd_toEndOf="@+id/etNumeroBits"
        app:layout_constraintTop_toBottomOf="@+id/tvRa" />

    <EditText
        android:id="@+id/etNumeroBits"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginTop="186dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hint_numero"
        android:inputType="number|numberDecimal"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintBottom_toTopOf="@+id/spUnidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spUnidade"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="118dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/etNumeroBits" />

    <Button
        android:id="@+id/btnConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="342dp"
        android:text="@string/botao_converter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvRes"
        app:layout_constraintStart_toStartOf="@+id/tvRes"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="281dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spUnidade" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/unidade"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnConverter"
        app:layout_constraintEnd_toStartOf="@+id/spUnidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumeroBits" />
</androidx.constraintlayout.widget.ConstraintLayout>